# rust-gallery

./: .dockerignore  .env  .gitignore  .release  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  TESTING.md  diesel.toml
.circleci/: config.yml
.claude/: settings.local.json
.github/: dependabot.yml
.junie/: guidelines.md
migrations/20240820150332_create_files_table/: up.sql
migrations/2025-03-22-170601_config/: up.sql
migrations/2025-12-11-add_performance_indices/: down.sql  up.sql
src/: cache_files.rs  constants.rs  context.rs  error.rs  file_schema.rs  files_download.rs  files_index.rs  logging.rs  main.rs  middleware.rs  random_files.rs  random_files_json.rs  task_manager.rs  tests.rs
src-ui/: .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  MODERNIZATION.md  Makefile  README.md  craco.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src-ui/public/: index.html  manifest.json  openapi.json
src-ui/src/: App.tsx  Router.lazy.tsx  Router.tsx  index.tsx  reportWebVitals.ts  setupTests.ts
src-ui/src/components/: AccessibleButton.tsx  AccessibleModal.tsx  AlbumCard.tsx  ApiDocs.tsx  CacheManager.tsx  ConfigManager.tsx  DeleteDialog.tsx  ErrorBoundary.tsx  FolderCard.tsx  MenuSection.tsx  MobileNavigation.tsx  MobilePhotoSwipeGallery.tsx  PhotoSwipeGallery.tsx  RandomPhotoView.tsx  SearchBar.tsx  SkipNavigation.tsx  TagDialog.tsx  ThumbnailSlideshow.tsx  VirtualFolderList.tsx  VirtualPhotoGrid.tsx
src-ui/src/config/: constants.ts
src-ui/src/context/: AppProviders.tsx  ConfigContext.tsx  FolderContext.tsx  FolderContextCompat.tsx  FolderDataContext.tsx  PaginationContext.tsx  SearchContext.tsx  TagsContext.tsx  UIContext.tsx
src-ui/src/hooks/: useConfig.ts  useFolders.ts  useImageCache.ts  useInfiniteScroll.ts  useMobile.ts  useUI.ts
src-ui/src/lib/: queryClient.ts
src-ui/src/mocks/: browser.ts  handlers.ts
src-ui/src/pages/: ApiDocs.tsx  FolderDetail.tsx  FolderList.tsx  TagView.tsx
src-ui/src/schemas/: gallery.schema.ts
src-ui/src/services/: api.tsx
src-ui/src/stores/: configStore.ts  folderStore.ts  uiStore.ts
src-ui/src/style/: App.css  index.css  photoswipe.css  (+1 more)
src/handlers/: mod.rs
static/: asset-manifest.json  beta.html.tera  files.html.tera  index.html  index.html.tera  openapi.json  random.copy.html.tera  random.html.tera  tasks.html.tera
static/css/: beta.css
static/js/: gallery.js  index.js
(+56 files in other folders)
