[package]
name = "rusty-images"
version = "0.4.3"
edition = "2024"

[profile.release]
opt-level = 3
debug = "none"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_cors = "0.6.0"
diesel = { version = "2.2.7", features = ["sqlite", "r2d2", "serde_json"] }
diesel_migrations = {version = "2.2"}
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
walkdir = "2.5.0"
sha2 = "0.10.8"
image = "0.25.5"
moka = { version = "0.12.8", features = ["sync"] }
chrono = "0.4.40"


[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

