[package]
name = "rusty-images"
version = "0.5.4"
edition = "2024"

[profile.release]
opt-level = 3
debug = "none"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json", "http2"] }
rocket_cors = "0.6"
diesel = { version = "2.2.10", features = ["r2d2", "serde_json", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = {version = "2.2"}
walkdir = "2.5.0"
sha2 = "0.10.9"
image = "0.25.6"
moka = { version = "0.12.10", features = ["sync"] }
chrono = "0.4.41"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool", "sqlite_pool"]

